swen430as1/tests/valid/IntDiv_Valid_3.while
int f(int x, int y, int z) {
    return x / y / z;    
}

void main() {
    assert f(100,4,3) == 8;
}
